kubernetes/storage/nginx-test/httproute.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRoute
metadata:
  name: nginx-test-route
  namespace: storage
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
    - name: envoy-external
      namespace: envoy-gateway
  hostnames:
    - "nginx-test.krapulax.dev"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      backendRefs:
        - name: nginx-test-service
          port: 80
          kind: Service
          group: ""
